# VegSp

./: README.md  build.gradle  gradle.properties  settings.gradle  ss
app/: build.gradle
app/release/: output-metadata.json
app/schemas/com.atinytot.vegsp_v_1.room.UserDataBase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fShader.frag  vShader.vert
app/src/main/cpp/: CMakeLists.txt  OpenGLRender.cpp  OpenGLRender.h
app/src/main/cpp/utils/: GLUtil.cpp  GLUtil.h  LogUtil.h
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_in_right.xml  slide_out_left.xml
app/src/main/res/drawable/: day_bg.xml  hint_shadow.xml  nickname.xml  night_bg.xml  selector_item.xml
app/src/main/res/drawable-night/: bottom_shadow.xml  login_background.xml  password.xml  shape_edittext_cursor.xml  user.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  dialog_input.xml  fragment_display.xml  fragment_login.xml  fragment_main_navigation.xml  fragment_ranging.xml  fragment_register.xml  fragment_setting.xml  fragment_video.xml  item_display.xml  item_setting.xml  nav_header_root.xml  newton_cradle_loading.xml  root_activity.xml  test.xml
app/src/main/res/menu/: bottom_nav_menu.xml  gender.xml  vegetable_plot_menu.xml
app/src/main/res/navigation/: app.xml  bottom_nav.xml  nav_graph_main.xml
app/src/main/res/raw/: plant_frag.glsl  plant_vert.glsl
app/src/main/res/values/: attrs.xml  colors.xml  (+3 more)
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v27/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+70 files in other folders)
